@@ -16,6 +16,7 @@ export(labkey.experiment.createData)
 export(labkey.experiment.createMaterial)
 export(labkey.experiment.createRun)
 export(labkey.experiment.saveBatch)
+export(labkey.experiment.saveRuns)
 export(labkey.experiment.SAMPLE_DERIVATION_PROTOCOL)
 export(labkey.getModuleProperty)
 export(labkey.setModuleProperty)
