@@ -18,8 +18,8 @@ schema objects (\code{labkey.getSchema}).
 \tabular{ll}{
 Package: \tab Rlabkey\cr
 Type: \tab Package\cr
-Version: \tab 2.3.1\cr
-Date: \tab 2019-09-11\cr
+Version: \tab 2.3.2\cr
+Date: \tab 2019-09-12\cr
 License: \tab Apache License 2.0\cr
 LazyLoad: \tab yes\cr
 }
